# my_bookstore

./: Dockerfile  README.md  docker-compose.yaml  insert_fake_data.py  main.py  pyproject.toml  requirements.txt
accounts/: admin.py  models.py
accounts/migrations/: 0001_initial.py  0002_alter_customuser_phone_number.py
bookstore/: celery.py  settings.py  smaple_env  urls.py
bookstore/setting/: base.py  development.py
bookstore/settings/: base.py  production.py
common/: models.py
core/: admin.py  apps.py  models.py  search.py  serializers.py  signals.py  tasks.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_enable_pg_trgm.py
utils/: documents.py
