[project]
name = "my-bookstore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.5.3",
    "django>=5.2.6",
    "django-debug-toolbar>=6.0.0",
    "django-elasticsearch-dsl>=9.0",
    "django-elasticsearch-dsl-drf>=0.22.5",
    "django-filter>=25.1",
    "django-redis>=6.0.0",
    "djangorestframework>=3.16.1",
    "elasticsearch>=9.1.1",
    "faker>=37.8.0",
    "pillow>=11.3.0",
    "psycopg2-binary==2.9.10",
    "python-decouple>=3.8",
    "whitenoise>=6.11.0",
]
